Hope I have updated it to ng13

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:lib": "ng build angular-inviewport",
     "test": "ng test",
     "lint": "npm run stylelint && npm run nglint && npm run prettier",
     "lint:fix": "npm run stylelint -- --fix && npm run nglint -- --fix && npm run prettier -- --write",
@@ -45,22 +46,23 @@
     "build:client-and-server-bundles": "ng build --prod && ng run angular-inviewport:server",
     "webpack:server": "webpack --config webpack.server.js --progress --colors",
     "release": "standard-version",
-    "postrelease": "npm run packagr"
+    "postrelease": "npm run packagr",
+    "prepare": "npm run build:lib"
   },
   "private": false,
   "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular/animations": "10.0.5",
-    "@angular/cli": "10.0.4",
-    "@angular/common": "10.0.5",
-    "@angular/compiler": "10.0.5",
-    "@angular/compiler-cli": "10.0.5",
-    "@angular/core": "10.0.5",
-    "@angular/platform-browser": "10.0.5",
-    "@angular/platform-browser-dynamic": "10.0.5",
-    "@angular/platform-server": "10.0.5",
-    "@nguniversal/express-engine": "^10.0.1",
+    "@angular-devkit/build-angular": "^13.3.0",
+    "@angular/animations": "^13.3.0",
+    "@angular/cli": "^13.3.0",
+    "@angular/common": "^13.3.0",
+    "@angular/compiler": "^13.3.0",
+    "@angular/compiler-cli": "^13.3.0",
+    "@angular/core": "^13.3.0",
+    "@angular/platform-browser": "^13.3.0",
+    "@angular/platform-browser-dynamic": "^13.3.0",
+    "@angular/platform-server": "^13.3.0",
+    "@nguniversal/express-engine": "^13.0.0",
     "@thisissoon/schematics": "^1.0.0-alpha.17",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.2",
@@ -74,7 +76,7 @@
     "intersection-observer": "^0.11.0",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "^6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -82,7 +84,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-mocha-reporter": "^2.2.5",
     "lint-staged": "^10.2.11",
-    "ng-packagr": "^10.0.0",
+    "ng-packagr": "^13.0.0",
     "prettier": "^2.0.5",
     "protractor": "^7.0.0",
     "rxjs": "^6.6.0",
@@ -97,8 +99,8 @@
     "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.16.0",
-    "typescript": "~3.9.7",
-    "zone.js": "~0.10.3"
+    "typescript": "~4.4.0",
+    "zone.js": "~0.11.4"
   },
   "config": {
     "commitizen": {
