--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+
 /tmp
 /out-tsc
 .ng_pkg_build
@@ -33,6 +33,7 @@
 npm-debug.log
 testem.log
 /typings
+.angular
 
 # System Files
 .DS_Store
