--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thisissoon/angular-inviewport",
-  "version": "4.2.2",
+  "version": "5.0.0",
   "description": "A simple lightweight library for Angular that detects when an element is within the browser viewport and adds a sn-viewport--in or sn-viewport--out class to the element.",
   "keywords": [
     "angular",
@@ -47,10 +47,9 @@
     "webpack:server": "webpack --config webpack.server.js --progress --colors",
     "release": "standard-version",
     "postrelease": "npm run packagr",
-    "prepare": "npm run build:lib"
+    "prepare": "npm run build:client-and-server-bundles"
   },
   "private": false,
-  "peerDependencies": {},
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.0",
     "@angular/animations": "^13.3.0",
@@ -84,7 +83,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-mocha-reporter": "^2.2.5",
     "lint-staged": "^10.2.11",
-    "ng-packagr": "^13.0.0",
     "prettier": "^2.0.5",
     "protractor": "^7.0.0",
     "rxjs": "^6.6.0",
